Support billboard border preferences through the API
